# elpla

./: .dockerignore  .gitignore  AUTHORS  Dockerfile  Makefile.am  README.md  configure.ac  supervisord.conf
configs/elpla/: assign.msg  avail.msg  elpla.rc
configs/nginx/: nginx.conf
configs/php-fpm/pool.d/: www.conf
configs/supervisord/: supervisord.conf
defaults/: assign.msg
elpla/: autogen.sh  configure.ac
elpla/src/: Makefile.am  availability.php  befreiung.cpp  befreiung.h  closing_day.cpp  ed_config.cpp  ed_config.h  ed_holidays.cpp  ed_notify.cpp  ed_presence.cpp  ed_state.cpp  ed_state.h  eltern.cpp  eltern_webapp.cpp  notifier.cpp  notifier.h  parent_list.cpp  shift.h  shift_list.cpp  stats.cpp  waiver_list.cpp
mariadb/: Dockerfile  elpla-schema.sql
nginx/: nginx.conf
resources/: WtSoundManager.swf
resources/themes/bootstrap/3/: bootstrap.css
src/: closing_day.h  closing_days.cpp  closing_days.h  ed_config.cpp  ed_config.h  ed_notify.cpp  ed_statistics.cpp  ed_webapp.cpp  eltern.h  email_type.h  notifier.cpp  notifier.h  parent_list.cpp  parent_list.h  shift.cpp  shift_list.h  waiver_list.h
statics/css/: ed.css
