
AC_INIT([Mafalda Elterndienstplan], [1.0.0], [mafalda@engarda.org], [mafalda_ed])

AC_CONFIG_SRCDIR([Makefile.am])
AM_INIT_AUTOMAKE([foreign])
AM_SILENT_RULES([yes])

# Checks for programs.
LT_INIT
AC_SUBST(LIBTOOL_DEPS)
AC_PROG_CXX
AX_CXX_COMPILE_STDCXX_11(noext)


AC_CONFIG_FILES(Makefile
                src/Makefile)

AC_OUTPUT
